<resources>
    <string name="app_name">Soimah</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperatur">Temperatur</string>
    <string name="kelembaban">Kelembaban</string>
    <string name="lampu">Lampu</string>
    <string name="ruang_tamu">R. Tamu</string>
    <string name="dapur">Dapur</string>
    <string name="teras">Teras</string>
    <string name="ruang_utama">R. Utama</string>
    <string name="kamar_mandi">Kamar Mandi</string>
    <string name="kamar_anak">Kamar Anak</string>
    <string name="ruang_keluarga">R. Keluarga</string>
    <string name="select_date_button">Select Date Button</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="no_kartu">No Kartu</string>
    <string name="nama">Nama</string>
    <string name="jam">Jam</string>
    <string name="doorlock">Doorlock</string>
</resources>
