<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_lamp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LightActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:weightSum="2">

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_utama"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_utama"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ruang_utama"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:weightSum="2">

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_teras"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_teras"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/teras"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_tamu"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_tamu"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ruang_tamu"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:weightSum="2">

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_keluarga"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_keluarga"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ruang_keluarga"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_dapur"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_dapur"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/dapur"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:weightSum="2">

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_kamar_mandi"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_kamar_mandi"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/kamar_mandi"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ll_anak"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:elevation="4dp"
                card_view:cardCornerRadius="8dp">

                <ImageButton
                    android:id="@+id/img_btn_anak"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/kamar_anak"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

            </android.support.v7.widget.CardView>
        </TableRow>
    </TableLayout>
</android.support.v4.widget.SwipeRefreshLayout>